Základní html a css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Piškvorky</title>
   </head>
   <body>
-    <h1>Piškvorky</h1>
+    <div class="menu-conteiner">
+      <img class="menu-img" src="uvodni.jpg" alt="Piškvorky img" />
+      <h1 class="menu-title">Piškvorky</h1>
+      <div class="menu-text">
+        <p>
+          Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle
+          se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši
+          skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
+          čtverečkovaný papír. Přejeme vám hodně zábavy!
+        </p>
+      </div>
+      <a
+        class="menu-button menu-button__rules"
+        href="https://czechitas-podklady.cz/Piskvorky-pravidla/"
+        >Pravidla</a
+      >
+      <a class="menu-button menu-button__start" href="index.html">Začít hrát</a>
+    </div>
   </body>
 </html>
