úpravy HTML a CSS

--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <title>Piškvorky</title>
   </head>
   <body>
-    <div class="menu-conteiner">
-      <img class="menu-img" src="uvodni.jpg" alt="Piškvorky img" />
-      <h1 class="menu-title">Piškvorky</h1>
-      <div class="menu-text">
-        <p>
-          Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle
-          se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši
-          skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
-          čtverečkovaný papír. Přejeme vám hodně zábavy!
-        </p>
-      </div>
+    <div class="menu__conteiner">
+      <img class="menu__img" src="uvodni.jpg" alt="Piškvorky img" />
+      <h1 class="menu__title">Piškvorky</h1>
+      <p class="menu__text">
+        Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se
+        hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou
+        aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
+        čtverečkovaný papír. Přejeme vám hodně zábavy!
+      </p>
       <a
-        class="menu-button menu-button__rules"
+        class="menu__button menu__button--rules"
         href="https://czechitas-podklady.cz/Piskvorky-pravidla/"
         >Pravidla</a
       >
-      <a class="menu-button menu-button__start" href="index.html">Začít hrát</a>
+      <a class="menu__button menu__button--start" href="index.html"
+        >Začít hrát</a
+      >
     </div>
   </body>
 </html>
