Nova stranka hra.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="menu__conteiner">
       <img class="menu__img" src="uvodni.jpg" alt="Piškvorky img" />
-      <h1 class="menu__title">Piškvorky</h1>
+      <h1 class="menu__title title">Piškvorky</h1>
       <p class="menu__text">
         Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se
         hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou
@@ -21,9 +21,7 @@
         href="https://czechitas-podklady.cz/Piskvorky-pravidla/"
         >Pravidla</a
       >
-      <a class="menu__button menu__button--start" href="index.html"
-        >Začít hrát</a
-      >
+      <a class="menu__button menu__button--start" href="hra.html">Začít hrát</a>
     </div>
   </body>
 </html>
