--- a/hra.html
+++ b/hra.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script type="module" src="hra.js"></script>
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Piškvorky</title>
@@ -35,16 +36,16 @@
         </div>
       </div>
       <div class="game__field">
-        <button class="game__btn"></button>
-        <button class="game__btn"></button>
-        <button class="game__btn"></button>
-        <button class="game__btn"></button>
-        <button class="game__btn"></button>
-        <button class="game__btn"></button>
-        <button class="game__btn"></button>
-        <button class="game__btn"></button>
-        <button class="game__btn"></button>
-        <button class="game__btn"></button>
+        <button class="game__btn" id="game__btn1"></button>
+        <button class="game__btn" id="game__btn2"></button>
+        <button class="game__btn" id="game__btn3"></button>
+        <button class="game__btn" id="game__btn4"></button>
+        <button class="game__btn" id="game__btn5"></button>
+        <button class="game__btn" id="game__btn6"></button>
+        <button class="game__btn" id="game__btn7"></button>
+        <button class="game__btn" id="game__btn8"></button>
+        <button class="game__btn" id="game__btn9"></button>
+        <button class="game__btn" id="game__btn10"></button>
         <button class="game__btn"></button>
         <button class="game__btn"></button>
         <button class="game__btn"></button>
